Fix issue with overflowing text

--- a/apps/blog/src/components/DrawerComment/index.module.scss
+++ b/apps/blog/src/components/DrawerComment/index.module.scss
@@ -13,6 +13,10 @@
         &:not(:last-child) {
             border-bottom: 1px solid color(sub);
         }
+
+        > div {
+            min-width: 0;
+        }
     }
 
     &__avatar {
@@ -28,7 +32,6 @@
     }
 
     &__body {
-        // two-line
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
